--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -279,6 +279,55 @@ p{
     height: 78px;
   }
 
+
+
+  form {
+    max-width: 500px;
+    margin: 0 auto;
+    background-color: #b30000;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  form label {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  form input,
+  form textarea {
+    width: 100%;
+    max-width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-sizing: border-box; /* Include padding and border in width */
+  }
+  
+  form textarea {
+    height: 150px;
+  }
+  
+  form button {
+    background-color: white;
+    color: #333;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+
+  .googmap{
+    display: flex;
+    justify-content: center;
+    padding: 25px;
+    max-height: 25%;
+  }
+  
+
 /******************************************
   /* Responsive STYLES
   /*******************************************/
